--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,9 +22,12 @@
 <div class="sidebar">
     <h2>Page Links</h2>
     <ul>
-        {% for name, link in page.page_links %}
+        {% for name in page.page_links %}
+            <p>
+              {{name}} 
+            </p>
         <li>
-            <a href="{{ link }}" title="{{ name }}">
+            <a href="" title="{{ name }}">
                 <span>{{name}}</span>
             </a>
         </li>
