--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,9 +1,11 @@
 ---
 ---
+@import "bootstrap.scss";
 @mixin font-size($size) {
   font-size: $size;
   font-size: calculateRem($size);
 }
+
 @mixin transition($args...) {
   -webkit-transition: $args;
   -moz-transition: $args;
@@ -15,15 +17,13 @@
 //********************************************************
 //                    Variables
 //********************************************************
-
 // Several accent colors, choose one or create your own!
-$accent-color: #3CA2A2;    // original =)
+//$accent-color: #3CA2A2; // original =)
 //$accent-color: #C38FD6;  // velvet
-//$accent-color: #8FD6B3;  // greenish
+$accent-color: #8FD6B3; // greenish
 //$accent-color: #35B4DE;  // bluish
 //$accent-color: #D2E354;  // yellowish
 //$accent-color: #52B54B;  // green
-
 $font-color: #dddddd;
 $background-color: #292929;
 $post-panel-color: #444;
@@ -32,32 +32,63 @@ $note-color: #87CEFA;
 $warning-color: #ffff00;
 // use this or pick any from /css/pics/background folder or from transparenttextures.com
 $background-pattern: '3px-tile.png';
-
 //********************************************************
 //                  Common styles
 //********************************************************
 body {
-
   color: $font-color;
-  background: $background-color url(pics/background/#{$background-pattern});
+  background-color: $background-color;
+  background-image: url("/assets/css/pics/background/#{$background-pattern}");
 }
+
 .well {
   background-color: $post-panel-color;
-  box-shadow: 0 0 0 0, 0px 8px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0 0, 0px 8px 16px rgba(63, 63, 63, 0.2);
   border: 0;
   border-radius: 6px;
+}
+.toc-well {
+  border-style: solid;
+  border-width: 5px;
+  border-color: #666666;
 }
 .main-page {
   width: 75%;
 }
+$list-border-radius: 5px;
+$list-border-color: forestgreen;
+.list-group-item {
+  border-radius: $list-border-radius !important;
+  border-style: solid;
+  border-width: 2.5px;
+  //border-color: $list-border-color;
+}
 
-h1 { font-size: 2em; }
-h2 { font-size: 1.5em; }
-h3 { font-size: 1.17em; }
-h4 { font-size: 1.12em; }
-h5 { font-size: .83em; }
-h6 { font-size: .75em; }
+.list-group-header {
+  border-radius: $list-border-radius !important;
+  border-style: solid;
+  border-width: 2.5px;
+  border-color: $list-border-color;
+}
 
+.list-group {
+  border-radius: $list-border-radius !important;
+  border-style: solid;
+  border-width: 2.5px;
+  border-color: $list-border-color;
+}
+sub {
+  line-height: 1;
+}
+
+sup {
+  line-height: 1;
+}
+
+span.badge {
+  white-space: normal !important;
+  text-align: center !important;
+}
 img {
   display: inline-block;
   margin: 0 auto;
@@ -65,7 +96,7 @@ img {
   max-height: 100%;
 }
 
-img + em {
+img+em {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -79,8 +110,20 @@ blockquote {
 
 a {
   color: $accent-color;
+  &:hover {
+    color: darkgreen;
+    text-decoration: none;
+  }
+  &:visited {
+    color: green;
+    text-decoration: none;
+  }
 }
-
+hr {
+  background-color: forestgreen;
+  height: 2pt;
+  border-radius: 5px;
+}
 //********************************************************
 //                    Social Links
 //********************************************************
@@ -90,7 +133,7 @@ ul.social-media {
   li {
     display: inline-block;
   }
-  li > a {
+  li>a {
     width: 45px;
     height: 45px;
     @include transition(color 0.2s);
@@ -102,62 +145,68 @@ ul.social-media {
   }
 }
 
-
 //********************************************************
 //                    Share
 //********************************************************
-.share-bar{
-  text-align: right;
+.share-bar {
+  text-align: left;
+  position: fixed;
+  top: 50%;
+  margin-right: 100%;
+  margin-left: 0%;
+  left: 0;
+  z-index: 10;
 }
 
 ul.share-buttons {
   list-style: none;
+  margin-right: 100%;
+  margin-left: 0;
   padding: 0;
   li {
-    display: inline-block;
-    .fa-facebook,
-    .fa-twitter,
-    .fa-google-plus,
-    .fa-linkedin,
-    .fa-envelope-o,
-    .fa-pinterest {
-      color: #ffffff
-    }
     a {
       text-decoration: none;
     }
-
-    -webkit-transition: -webkit-transform .4s;
-    -moz-transition: -moz-transform .4s;
-    -ms-transition: -ms-transform .4s;
-    -o-transition: -o-transform .4s;
-    transition: transform .4s;
   }
-
-  // Square frame
-  li.share-facebook .fa-square-o { color: #3B5998;}
-  li.share-twitter .fa-square-o { color: #55acee;}
-  li.share-google-plus .fa-square-o { color: #dd4b39;}
-  li.share-linkedin .fa-square-o { color: #4875B4;}
-  li.share-pinterest .fa-square-o { color: #BD081C;}
-  li.share-envelope .fa-square-o { color: #3B5998;}
-  // Circle frame
-  li.share-facebook .fa-circle-thin { color: #3B5998;}
-  li.share-twitter .fa-circle-thin { color: #55acee;}
-  li.share-google-plus .fa-circle-thin { color: #dd4b39;}
-  li.share-linkedin .fa-circle-thin { color: #4875B4;}
-  li.share-pinterest .fa-circle-thin { color: #BD081C;}
-  li.share-envelope .fa-circle-thin { color: #3B5998;}
-
+  li.share-facebook {
+    color: #3B5998;
+  }
+  li.share-twitter {
+    color: #55acee;
+  }
+  li.share-google-plus {
+    color: #dd4b39;
+  }
+  li.share-linkedin {
+    color: #4875B4;
+  }
+  li.share-pinterest {
+    color: #BD081C;
+  }
+  li.share-envelope {
+    color: #3B5998;
+  }
+  li.share-reddit {
+    color: tomato;
+  }
   li:hover {
-    -webkit-transform: scale(1.3,1.3);
-    -moz-transform: scale(1.3,1.3);
-    -ms-transform: scale(1.3,1.3);
-    -o-transform: scale(1.3,1.3);
-    transform: scale(1.3,1.3);
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.5);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.5);
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.5);
+    transition: all 200ms ease-in;
+    transform: scale(1.5);
   }
 }
 
+//********************************************************
+//                  Breadcrumbs
+//********************************************************
+//ol.breadcrumb {
+//}
 //********************************************************
 //                    Sidebar
 //********************************************************
@@ -165,6 +214,7 @@ ul.share-buttons {
   margin-top: .7em;
   line-height: 1em;
 }
+
 ul.sideBarTags {
   list-style: none;
   list-style-type: none;
@@ -172,7 +222,6 @@ ul.sideBarTags {
     content: '\f02b';
     display: none;
     font-family: 'Font Awesome 5 Solid';
-    float: left;
     margin-left: -1.5em;
   }
 }
@@ -184,6 +233,7 @@ h2.post-title {
   padding-top: 10px;
   text-align: left;
 }
+
 div.post-meta {
   border-width: 1px 0;
   border-color: #666666;
@@ -191,16 +241,18 @@ div.post-meta {
   margin: 0 0 20px;
   ul {
     display: inline;
-    padding-left: 0;
+    padding-left: 5px;
   }
-  ul > li {
+  ul>li {
     display: inline;
-    padding: 0 0 5px 20px;
+    padding: 0 10px 5px 10px;
   }
   .post-time {
     display: inline;
+    padding-right: 10px
   }
 }
+
 .post-footer {
   height: 40px;
   display: table;
@@ -214,19 +266,21 @@ div.post-meta {
 //                    Note / Warning
 //********************************************************
 .note {
-  position:relative;
+  position: relative;
   border: 0;
   padding-left: 30px;
 }
+
 .note:before {
   content: "\f06a";
   font-size: 2em;
   font-family: 'Font Awesome 5 Solid';
   left: 0px;
-  position:absolute;
+  position: absolute;
   top: 0;
   color: $note-color;
 }
+
 .warning:before {
   content: "\f071";
   color: $warning-color;
@@ -236,40 +290,38 @@ div.post-meta {
 //                    Header
 //********************************************************
 nav a {
-  padding-top: 20px !important;
-  padding-bottom: 20px !important;
   @include transition(color 0.31s);
   font-size: 18px;
   font-family: Ubuntu;
   -webkit-transition: all 0.7s ease;
   transition: all 0.7s ease;
 }
+
 nav.navbar {
   -webkit-transition: all 0.7s ease;
   transition: all 0.7s ease;
 }
+
 nav.navbar.shrink {
   min-height: 15px;
 }
+
 .navbar-brand {
   font-size: 30px;
   color: $accent-color;
-
 }
+
 nav.shrink a {
   padding-top: 10px !important;
   padding-bottom: 10px !important;
   font-size: 15px;
 }
+
 nav.shrink .navbar-brand {
-  font-size: 25px;
+  font-size: 20px;
   height: inherit;
 }
 
-nav.shrink .navbar-toggle {
-  padding: 4px 5px;
-  margin: 8px 15px 8px 0;
-}
 
 //********************************************************
 //                    Footer
@@ -282,43 +334,21 @@ nav.shrink .navbar-toggle {
   background-color: $footer-background-color;
   font: normal 16px sans-serif;
   padding: 20px 25px;
-  margin-top: 80px;
   text-align: center;
-  bottom: 0;
-  left: 0;
+  margin-top: 20px;
   width: 100%;
-  position: absolute;
+  top: 100%;
+  bottom: 0;
 }
 
+iframe#follow.followme {
+  width: 100%;
+  height: 100%;
+}
 
 //********************************************************
 //            Table of content (work in progress)
 //********************************************************
-.toc {
-  background-color: #2c2c2c;
-  margin-left: -19px;
-  margin-right: -19px;
-}
-
-.box h3{
-	text-align:center;
-	position:relative;
-	top:80px;
-}
-.box {
-	width:70%;
-	height:200px;
-	background:#FFF;
-	margin:40px auto;
-}
-.wrapper{
-  min-height: 100%;
-  position: relative;
-}
-.content{
-  padding-bottom: 250px;
-}
-
 //********************************************************
 //       Custom classes to apply to block elements,
 //  more info: http://pavelmakhov.com/2015/12/images-in-jekyll
@@ -332,12 +362,13 @@ nav.shrink .navbar-toggle {
   margin: 2px 3px;
   padding: 0px 5px;
 }
-.center-image
-{
+
+.center-image {
   margin: 0 auto;
   display: block;
 }
-.filename{
+
+.filename {
   padding: 0px;
   margin: 0px;
   background-color: #292929;
@@ -346,7 +377,7 @@ nav.shrink .navbar-toggle {
   border-top-right-radius: 3px;
   margin-bottom: 0px;
   padding-left: 1em;
-  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
   border-left: 0px;
   bottom: -2px;
   position: relative;
@@ -354,9 +385,7 @@ nav.shrink .navbar-toggle {
 }
 
 //********************************************************
-
 @media (min-width: 1000px) {
-
   .footer-distributed .footer {
     text-align: center;
   }
@@ -365,6 +394,36 @@ nav.shrink .navbar-toggle {
     margin: 0 auto 20px;
   }
   .footer-distributed .footer {
-    line-height: 1.8;
+    line-height: 1;
+  }
+}
+
+img#nixstats {
+  height: 40px;
+  width: 40px;
+
+}
+
+.bg-dark-gray {
+  background-color: #292929
+}
+
+.dropdown-item:hover {
+  background-color: #292c2f
+
+}
+
+dt {
+  font-weight: bold;
+  font-variant: small-caps;
+}
+dd {
+	background:none no-repeat left top;
+	padding-left: 50px;
+}
+
+#markdown-toc {
+  li {  
+    list-style: none;
   }
 }
