--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
                     {% include share.html %}
                   </div>
                   <div>
-                    <p class="d-flex mx-auto">If you want me to make a post about something let me know!</p>
+                    <p class="mx-auto">If you want me to make a post about something let me know!</p>
                     <blockquote class="d-block mx-auto">
                       <p>“It's now very common to hear people say, 'I'm rather offended by that.' As if that gives them certain rights. It's actually nothing more... than a whine. 'I find that offensive.' It has no meaning; it has no purpose; it has no reason to be respected as a phrase. 'I am offended by that.' Well, so fucking what."</p>
                       <footer class="blockquote-footer"><cite title="Source Title">Stephen Fry</cite></footer>
