fix header being a bitch

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,7 +63,7 @@
       })();
     </script>
 
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-md">
       <a class="navbar-brand" href="{{ '' | relative_url }}/">{{ site.name }}</a>
       <span class="navbar-text mr-1">
         <sub>{{ site.description }}</sub>
