--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@
                   </div>
                   {% endif %}
                 </div>
-                <div class="mt-3">
+                <div class="mt-3 bg-dark">
                   <p class="mx-auto">If you want me to make a post about something let me know!</p>
                   <blockquote class="mx-auto">
                     <p>“It's now very common to hear people say, 'I'm rather offended by that.' As if that gives them certain rights. It's actually nothing more... than a whine. 'I find that offensive.' It has no meaning; it has no purpose; it has no reason to be respected as a phrase. 'I am offended by that.' Well, so fucking what."</p>
