fix sidebar stuff and add stuff from iotaspencer.me

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,37 +1,45 @@
-<div class="sidebar ">
-    <h2>Recent Posts</h2>
-    <ul>
-        {% for post in site.posts limit:5 %}
-        <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
-</div>
+<div class="sidebar">
+    <div class="sidebar ">
+        <h2>Recent Posts</h2>
+        <ul>
+            {% for post in site.posts limit:5 %}
+            <li>
+                <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 
-<div class="sidebar">
-    <h2>Tags</h2>
-    <ul class="sideBarTags">
-        {% assign tags = (site.tags | sort:0) %} {% for tag in tags %}
-        <li>
-            <a href="{{ '/tag/' | append: tag[0] | relative_url }}" data-toggle="tooltip" data-placement="right" title="{{ tag[1].size }}">
-                <span>{{tag[0] }}</span></a>
-        </li>
-        {% endfor %}
-    </ul>
+    <div class="sidebar">
+        <h2>
+            <span class="fa-layers fa-fw">
+                <i class="fas fa-cloud fa-2x" style="color:white;"></i>
+                <i class="fas fa-tag fa-1x" data-fa-transform="shrink-1 right-10 down-2" style="color:Green"></i>
+            </span>
+        </h2>
+            {% assign tags = (site.tags | sort:0) %} {% for tag in tags %}
+
+                <a data-placement="right" data-toggle="tooltip" href="/tag/{{ tag[0] | slugify }}" title="{{ tag[1].size }}" style="font-size: {{ tag | last | size | times: 20 | plus: 100 }}%">
+
+                    <span>{{ tag | first }}</span>
+                </a>
+            {% endfor %}
+    </div>
+    {% if page.page_links %}
+    <div class="sidebar">
+        <h2>Page Links</h2>
+        <ul>
+            {% for name in page.page_links %}
+            <li>
+                <a href="{{ name[1] }}" title="{{ name[0] }}">
+                    <span>{{name[0]}}</span>
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
+    <div class="sidebar">
+
+    </div>
 </div>
-{% if page.page_links %}
-<div class="sidebar">
-    <h2>Page Links</h2>
-    <ul>
-        {% for name in page.page_links %}
-            <p>
-              {{name}} 
-            </p>
-        <li>
-            <a href="" title="{{ name }}">
-                <span>{{name}}</span>
-            </a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-{% endif %}
