fix sidebar stuff and add stuff from iotaspencer.me

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,37 +4,34 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ site.name }}{% if page.title %} | {{ page.title }} {% endif %}</title>
-    <meta name="theme-color" content="#222222" />
+    <meta name="theme-color" content="#292929" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{{ '/favicon.png' | relative_url }}">
+    {% include meta.html %}
     <script>
       FontAwesomeConfig = {
-        searchPseudoElements: true
+        autoReplaceSvg: 'nest'
       };
     </script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+
     <script src="{{ '/assets/js/header.js' | relative_url }}"></script>
-    <script src="{{ '/assets/js/toc.js' | relative_url }}"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
-    {% if page.title == 'resume' %}
-        <link href="{{ '/assets/css/resume.scss' | relative_url }}" rel="stylesheet">
-    {% endif %}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="{{ '/assets/css/theme.css' | relative_url }}" rel="stylesheet">
     <link href="{{ '/assets/css/syntax.css' | relative_url }}" rel="stylesheet">
     <link rel="manifest" href="/manifest.json" />
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
     <script>
       var OneSignal = window.OneSignal || [];
-      OneSignal.push(function() {
+      OneSignal.push(function () {
         OneSignal.init({
-          appId: "1c47ee95-b072-4a97-b9d6-a907b84e24f7",
+          appId: "24b58b08-c7c8-4c50-98e1-e82fd7d7f03f",
           autoRegister: false,
           notifyButton: {
             enable: true,
@@ -44,7 +41,7 @@
     </script>
   </head>
 
-  <body>
+  <body data-spy="scroll">
     {% include google-analytics.html %} {% include yandex-metrica.html %}
     <script type="text/javascript">
       WebFontConfig = {
@@ -62,29 +59,50 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
+    <header id="header">
+      <nav class="navbar navbar-dark bg-dark navbar-expand-md mb-3">
+        <a class="navbar-brand" href="{{ '' | relative_url }}/"><span style="color:green;">{{ site.name }}</span></a>
+        <span class="navbar-text text-small mr-1">
+          <sub>{{ site.description }}</sub>
+        </span>
+        <div class="bg-dark navbar-toggle justify-content-end d-md-none" data-toggle="collapse" data-target="#navbar">
+          <button class="bg-dark py-2 px-3 border border-1 border-secondary rounded">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse justify-content-end">
+          <ul class="nav navbar-nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link" href="{{ '' | relative_url }}/">/home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ 'about' | relative_url }}">/about</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ 'tags' | relative_url }}">/tags</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ 'archive' | relative_url }}">/archive</a>
+            </li>
+            <!--<li class="nav-item">
+            <a class="nav-link" href="{{'resume' | relative_url }}">/resume</a>
+          </li>-->
+            <li class="nav-item dropdown" id="projects-dropdown">
+              <a class="nav-link dropdown-toggle" href="{{'projects' | relative_url }}" data-toggle="dropdown">/projects</a>
+              <div class="dropdown-menu bg-dark">
+                <a class="dropdown-item" href="/projects/mkmatter">mkmatter</a>
+                <a class="dropdown-item" href="/projects/bot-template">bot-template</a>
+                <a class="dropdown-item" href="/projects/micro-install">micro_install</a>
+                <a class="dropdown-item" href="/projects/site_hook">site_hook</a>
 
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md mb-3">
-      <a class="navbar-brand" href="{{ '' | relative_url }}/">{{ site.name }}</a>
-      <span class="navbar-text mr-1">
-        <sub>{{ site.description }}</sub>
-      </span>
-      <div class="bg-dark navbar-toggle navbar-toggler justify-content-end" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse justify-content-end">
-        <ul class="nav navbar-nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ '' | relative_url }}/">/home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ 'about' | relative_url }}">/about</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ 'tags' | relative_url }}">/tags</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ 'archive' | relative_url }}">/archive</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ 'gnupg' | relative_url }}">/gnupg</a>
+            </li>
+
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div id="between">
