--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,20 +1,27 @@
 {% include header.html %}
-    <div class="wrapper" style="top: 120;">
-      <div class="content">
-        <div class="container container-center">
-          <div class="row">
-            <div class="col-md-8">
-              <div class="well p-2 p-sm-2">
-                {{ content }}
-              </div>
+<div class="wrapper">
+    <div class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-9">
+                    <div>
+                        {% include breadcrumbs.html %}
+                    </div>
+
+                    <div class="well p-2 p-sm-2">
+                        {{ content }}
+                    </div>
+                </div>
+                <div class="col-md-3 d-none d-md-block">
+                    {% include sidebar.html %}
+                </div>
             </div>
-            <div class="col-md-4 hidden-xs">
-              {% include sidebar.html %}
-            </div>
-          </div>
         </div>
-      </div>
-      {% include footer.html %}
     </div>
-  </body>
+    {% include footer.html %}
+</div>
+</div>
+
+</body>
+
 </html>
