--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,8 @@
                                 If theres something you want me to post about. Contact me! See
                                 <a href="https://iotaspencer.me/about">here</a>
                             </span>
+                            </div>
+                            <div class="my-3 alert bg-dark">
                             <blockquote class="mx-auto">
                               <p>“It's now very common to hear people say, 'I'm rather offended by that.' As if that gives them certain rights. It's actually nothing more... than a whine. 'I find that offensive.' It has no meaning; it has no purpose; it has no reason to be respected as a phrase. 'I am offended by that.' Well, so fucking what."</p>
                               <footer class="blockquote-footer"><cite title="Source Title">Stephen Fry</cite></footer>
