add headings for about links

--- a/_includes/links.html
+++ b/_includes/links.html
@@ -177,15 +177,11 @@
   </li>
   {% endif %}
   <li>
-    <a title="My GNUPG Key" href="/gnupg" target="_blank">
+    <a title="My GNUPG Key" href="https://iotaspencer.me/gnupg" target="_blank">
       <i class="fas fa-key fa-2x" style="color:yellow;"></i>
     </a>
   </li>
-  <li>
-    <a title="NixStats Affiliate" href="https://nixstats.com/r/32628" target="_blank">
-      <img id="nixstats" src="{{ '/assets/images/nixstats.png' | relative_url }}" />
-    </a>
-  </li>
+
 
 </ul>
 <script>
