--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,18 +1,18 @@
 {% include header.html %}
 <div class="wrapper">
-    <div class="content">
+    <div class="content" id="content-div">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-9">
-                    <div>
-                        {% include breadcrumbs.html %}
+                <div class="col-md-9 d-inline-block">
+                    <div id="breadcrumbs">
+                        {% include nav-breadcrumbs.html %}
                     </div>
 
-                    <div class="well p-2 p-sm-2">
+                    <div class="well px-1 py-1 p-sm-2">
                         {{ content }}
                     </div>
                 </div>
-                <div class="col-md-3 d-none d-md-block">
+                <div id="sidebar" class="col-md-3 d-sm-block d-xs-block d-md-block">
                     {% include sidebar.html %}
                 </div>
             </div>
