--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 <div class="wrapper">
-    <div class="content">
+    <div class="content" id="content-div">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-8">
@@ -27,7 +27,7 @@
                                 </ul>
                             </div>
                             <div class="post-content">
-                                <div class="well toc-well float-right mx-3 px-3 pt-2 bg-dark">
+                                <div class="well toc-well float-right mx-3 px-3 pt-2 bg-dark-og">
                                     {% include toc.html html=content h_min=2 ordered=true id="post_toc" %}
                                 </div>
                                 <div>
@@ -35,37 +35,25 @@
                                 </div>
                                 {% include share.html %}
                             </div>
-                            {% if page.comments %}
-                            <div id="disqus_thread">
-                                <noscript>Please enable JavaScript to view the
-                                    <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-                                </noscript>
-                                <a href="http://disqus.com" class="dsq-brlink">comments powered by
-                                    <span class="logo-disqus">Disqus</span>
-                                </a>
-                            </div>
-                            {% endif %}
+
                         </div>
-                        <div class="my-3 alert bg-dark text-center">
+
+                        <div class="my-3 alert bg-dark-og text-center">
                             <span>
                                 If theres something you want me to post about. Contact me! See
                                 <a href="https://iotaspencer.me/about">here</a>
                             </span>
-                            </div>
-                            <div class="my-3 alert bg-dark">
-                            <blockquote class="mx-auto">
-                              <p>“It's now very common to hear people say, 'I'm rather offended by that.' As if that gives them certain rights. It's actually nothing more... than a whine. 'I find that offensive.' It has no meaning; it has no purpose; it has no reason to be respected as a phrase. 'I am offended by that.' Well, so fucking what."</p>
-                              <footer class="blockquote-footer"><cite title="Source Title">Stephen Fry</cite></footer>
-                            </blockquote>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 d-none d-md-block">
+                <div class="col-md-4">
                     {% include sidebar.html %}
                 </div>
             </div>
         </div>
-        {% include disqus-comments.html %}
+        {% if page.comments %}
+        {% include isso-comments.html %}
+        {% endif %}
     </div>
     {% include footer.html %}
 </div>
