--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -5,7 +5,6 @@
   font-size: $size;
   font-size: calculateRem($size);
 }
-
 @mixin transition($args...) {
   -webkit-transition: $args;
   -moz-transition: $args;
@@ -13,10 +12,10 @@
   -o-transition: $args;
   transition: $args;
 }
-
 //********************************************************
 //                    Variables
 //********************************************************
+
 // Several accent colors, choose one or create your own!
 //$accent-color: #3CA2A2; // original =)
 //$accent-color: #C38FD6;  // velvet
@@ -29,54 +28,37 @@ $background-color: #292929;
 $post-panel-color: #444;
 $footer-background-color: #292c2f;
 $note-color: #87CEFA;
-$warning-color: #ffff00;
-// use this or pick any from /css/pics/background folder or from transparenttextures.com
-$background-pattern: '3px-tile.png';
-//********************************************************
+$warning-color: #ffff00; // use this or pick any from /css/pics/background folder or from transparenttextures.com
+$background-pattern: '3px-tile.png'; //********************************************************
 //                  Common styles
 //********************************************************
+
 body {
   color: $font-color;
   background-color: $background-color;
   background-image: url("/assets/css/pics/background/#{$background-pattern}");
 }
-
 .well {
   background-color: $post-panel-color;
-  box-shadow: 0 0 0 0, 0px 8px 16px rgba(63, 63, 63, 0.2);
+  box-shadow: 0 0 0 0, 0 8px 16px rgba(63, 63, 63, 0.2);
   border: 0;
   border-radius: 6px;
 }
+
 .toc-well {
   border-style: solid;
   border-width: 5px;
   border-color: #666666;
 }
+
 .main-page {
   width: 75%;
 }
-$list-border-radius: 5px;
-$list-border-color: forestgreen;
-.list-group-item {
-  border-radius: $list-border-radius !important;
-  border-style: solid;
-  border-width: 2.5px;
-  //border-color: $list-border-color;
+
+#content-div {
+  margin-bottom: 1em;
 }
 
-.list-group-header {
-  border-radius: $list-border-radius !important;
-  border-style: solid;
-  border-width: 2.5px;
-  border-color: $list-border-color;
-}
-
-.list-group {
-  border-radius: $list-border-radius !important;
-  border-style: solid;
-  border-width: 2.5px;
-  border-color: $list-border-color;
-}
 sub {
   line-height: 1;
 }
@@ -89,6 +71,7 @@ span.badge {
   white-space: normal !important;
   text-align: center !important;
 }
+
 img {
   display: inline-block;
   margin: 0 auto;
@@ -110,50 +93,51 @@ blockquote {
 
 a {
   color: $accent-color;
+
   &:hover {
     color: darkgreen;
     text-decoration: none;
   }
+
   &:visited {
     color: green;
     text-decoration: none;
   }
 }
-hr {
-  background-color: forestgreen;
-  height: 2pt;
-  border-radius: 5px;
-}
 //********************************************************
 //                    Social Links
 //********************************************************
+
 ul.social-media {
   text-align: center;
-  padding: 0 0 10px 0;
+  padding: 0 0 10px;
+
   li {
     display: inline-block;
   }
-  li>a {
+
+  li > a {
     width: 45px;
     height: 45px;
     @include transition(color 0.2s);
     display: inline-block;
     color: white;
+
     &:hover {
       color: $accent-color;
     }
   }
 }
-
 //********************************************************
 //                    Share
 //********************************************************
+
 .share-bar {
   text-align: left;
   position: fixed;
   top: 50%;
   margin-right: 100%;
-  margin-left: 0%;
+  margin-left: 0;
   left: 0;
   z-index: 10;
 }
@@ -163,32 +147,41 @@ ul.share-buttons {
   margin-right: 100%;
   margin-left: 0;
   padding: 0;
+
   li {
     a {
       text-decoration: none;
     }
   }
+
   li.share-facebook {
     color: #3B5998;
   }
+
   li.share-twitter {
     color: #55acee;
   }
+
   li.share-google-plus {
     color: #dd4b39;
   }
+
   li.share-linkedin {
     color: #4875B4;
   }
+
   li.share-pinterest {
     color: #BD081C;
   }
+
   li.share-envelope {
     color: #3B5998;
   }
+
   li.share-reddit {
     color: tomato;
   }
+
   li:hover {
     z-index: 2;
     -webkit-transition: all 200ms ease-in;
@@ -201,7 +194,6 @@ ul.share-buttons {
     transform: scale(1.5);
   }
 }
-
 //********************************************************
 //                  Breadcrumbs
 //********************************************************
@@ -210,14 +202,21 @@ ul.share-buttons {
 //********************************************************
 //                    Sidebar
 //********************************************************
+
+div.sidebar {
+  padding: 1em;
+  margin-bottom: 0.5em;
+}
+
 .sidebar li {
-  margin-top: .7em;
+  margin-top: 0.7em;
   line-height: 1em;
 }
 
 ul.sideBarTags {
   list-style: none;
   list-style-type: none;
+
   li:before {
     content: '\f02b';
     display: none;
@@ -225,10 +224,10 @@ ul.sideBarTags {
     margin-left: -1.5em;
   }
 }
-
 //********************************************************
 //                    Post
 //********************************************************
+
 h2.post-title {
   padding-top: 10px;
   text-align: left;
@@ -239,17 +238,20 @@ div.post-meta {
   border-color: #666666;
   border-style: solid;
   margin: 0 0 20px;
+
   ul {
     display: inline;
     padding-left: 5px;
   }
-  ul>li {
+
+  ul > li {
     display: inline;
-    padding: 0 10px 5px 10px;
+    padding: 0 10px 5px;
   }
+
   .post-time {
     display: inline;
-    padding-right: 10px
+    padding-right: 10px;
   }
 }
 
@@ -261,10 +263,28 @@ div.post-meta {
   margin-top: 32px;
   text-align: center;
 }
+//********************************************************
+//                       Comments
+//********************************************************
 
+#isso-thread {
+  border-radius: 5px;
+  @include media-breakpoint-up(md) {
+    margin-left: 7em;
+    margin-right: 7em;
+  }
+  @include media-breakpoint-down(md) {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+  //margin-top: 1em;
+  background: linear-gradient(to bottom, black, rgb(41,41,41), black);
+  padding: 1em;
+}
 //********************************************************
 //                    Note / Warning
 //********************************************************
+
 .note {
   position: relative;
   border: 0;
@@ -275,7 +295,7 @@ div.post-meta {
   content: "\f06a";
   font-size: 2em;
   font-family: 'Font Awesome 5 Solid';
-  left: 0px;
+  left: 0;
   position: absolute;
   top: 0;
   color: $note-color;
@@ -285,10 +305,10 @@ div.post-meta {
   content: "\f071";
   color: $warning-color;
 }
-
 //********************************************************
 //                    Header
 //********************************************************
+
 nav a {
   @include transition(color 0.31s);
   font-size: 18px;
@@ -321,11 +341,10 @@ nav.shrink .navbar-brand {
   font-size: 20px;
   height: inherit;
 }
-
-
 //********************************************************
 //                    Footer
 //********************************************************
+
 .footer {
   text-align: center;
 }
@@ -345,14 +364,11 @@ iframe#follow.followme {
   width: 100%;
   height: 100%;
 }
-
-//********************************************************
-//            Table of content (work in progress)
-//********************************************************
 //********************************************************
 //       Custom classes to apply to block elements,
 //  more info: http://pavelmakhov.com/2015/12/images-in-jekyll
 //********************************************************
+
 .key {
   font-size: 1.0em;
   box-shadow: 1px 0 1px 0 #555, 0 1px 0 2px #888, 0 2px 0 2px #777;
@@ -360,7 +376,7 @@ iframe#follow.followme {
   -moz-border-radius: 3px;
   border-radius: 3px;
   margin: 2px 3px;
-  padding: 0px 5px;
+  padding: 0 5px;
 }
 
 .center-image {
@@ -369,30 +385,31 @@ iframe#follow.followme {
 }
 
 .filename {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   background-color: #292929;
   color: lightgrey;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   padding-left: 1em;
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-  border-left: 0px;
+  border-left: 0;
   bottom: -2px;
   position: relative;
   padding-bottom: 2px;
 }
-
 //********************************************************
 @media (min-width: 1000px) {
   .footer-distributed .footer {
     text-align: center;
   }
+
   .footer-distributed .footer {
     float: none;
     margin: 0 auto 20px;
   }
+
   .footer-distributed .footer {
     line-height: 1;
   }
@@ -401,29 +418,181 @@ iframe#follow.followme {
 img#nixstats {
   height: 40px;
   width: 40px;
-
 }
 
 .bg-dark-gray {
-  background-color: #292929
+  background-color: #292929;
+}
+
+.bg-dark-og {
+  background-color: rgb(41,41,41);
 }
 
 .dropdown-item:hover {
-  background-color: #292c2f
-
+  background-color: #292c2f;
 }
 
 dt {
   font-weight: bold;
   font-variant: small-caps;
 }
+
 dd {
-	background:none no-repeat left top;
-	padding-left: 50px;
+  background: none no-repeat left top;
+  padding-left: 50px;
 }
 
 #markdown-toc {
-  li {  
+  li {
     list-style: none;
+  }
+}
+
+hr.hr-text {
+  line-height: 2em !important;
+  position: relative !important;
+  margin-right: 25% !important;
+  outline: 0 !important;
+  border: 0 !important;
+  color: black !important;
+  text-align: center !important;
+  height: 1.5em !important;
+  opacity: 0.5 !important;
+
+  &:before {
+    content: '';
+    // use the linear-gradient for the fading effect
+    // use a solid background color for a solid bar
+    background: linear-gradient(to right, black, rgb(11, 177, 11), black) !important;
+    position: absolute !important;
+    left: 0 !important;
+    top: 50% !important;
+    width: 100% !important;
+    height: 2.5px !important;
+  }
+
+  &:after {
+    content: attr(data-content) !important;
+    position: relative !important;
+    display: inline-block !important;
+    color: black !important;
+    font-size: x-large;
+    padding: 0 0.5em !important;
+    line-height: 1em !important;
+    // this is really the only tricky part, you need to specify the background color of the container element...
+    color: #2ab80d !important;
+    background: #444 !important;
+  }
+}
+
+div#resume-sidebar > ul {
+  list-style-position: inside;
+  padding-left: 0;
+}
+
+.xp {
+  .xp-desc {
+
+  }
+
+  .xp-duration {
+
+  }
+}
+div#resume {
+  column-count: 1;
+ div.list-group {
+  border-style: none !important;
+  background: none !important;
+  border-color: none !important;
+  border-radius: 0 !important;
+  border-width: 0 !important;
+  border-style: none !important;
+}
+}
+div#resume {
+  li.list-group-item {
+  border-style: none !important;
+  background: none !important;
+  border-color: none !important;
+  border-radius: 0 !important;
+  border-width: 0 !important;
+  border-style: none !important;
+}
+}
+@media print {
+  .list-group, .list-group-item {
+    border-style: none;
+  }
+  #breadcrumbs {
+    display: none;
+  }
+
+  #sidebar {
+    display: none;
+  }
+
+  #footer-distributed {
+    display: none;
+  }
+
+  #sidebar-recent-posts {
+    display: none;
+  }
+
+  #sidebar-tag-cloud {
+    display: none;
+  }
+  div#resume > div#contact {
+    position: relative;
+    left: 60%;
+    right: 0;
+    color: #000000;
+  }
+
+  div#xp-edu-prohob {
+    width: 60%;
+    color: #000000;
+    div#xp-edu-prohob > div.list-group,li.list-group-item {
+      border-style: none;
+    }
+  }
+
+  div#resume-sidebar {
+    width: 40%;
+    color: #000000;
+  }
+  div#resume-sidebar > ul {
+    list-style-position: inside;
+    padding-left: 0;
+  }
+}
+
+// Guides CSS
+$list-border-radius: 5px;
+$list-border-color: forestgreen;
+
+.list-group-header.list-options-header {
+  border-radius: $list-border-radius !important;
+  border-style: none !important;
+  border-width: 0 !important;
+}
+.list-group-item.list-options-item {
+  border-radius: $list-border-radius !important;
+  border-style: solid;
+  border-width: 2.5px;
+  //border-color: $list-border-color;
+}
+.list-group.list-options {
+  border-radius: $list-border-radius !important;
+  border-style: solid;
+  border-width: 2.5px;
+  border-color: $list-border-color;
+}
+
+h1.section-header, h2.section-header, h3.section-header, h4.section-header, h5.section-header, h6.section-header {
+  font-family: "Cutive Mono", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", monospace !important;
+  &:before {
+    content: '> '
   }
 }
